libs/ui/input/kis_input_manager.h
@@ -101,6 +101,7 @@ private Q_SLOTS:
     void profileChanged();
     void slotCompressedMoveEvent();
     void deregisterPopupWidget();
+    void slotConfigChanged();
 
 private:
     bool startTouch(bool &retval);
