libs/ui/input/kis_input_manager_p.h
@@ -164,4 +164,7 @@ public:
     };
 
     KisSharedPtr<TabletLatencyTracker> tabletLatencyTracker;
+#ifdef Q_OS_WIN
+    bool ignoreHighFunctionKeys = false;
+#endif
 };
